<resources>
    <string name="app_name">UnitsConverter</string>
    <string name="textview">TextView</string>
    <string name="test">Test</string>
    <string name="kilogram_kg_to_pounds_lb">Kilogram(Kg) to Pounds (lb)</string>
    <string name="pounds_lb_to_kilograms_kg">Pounds(lb) to Kilograms(Kg)</string>
    <string name="kilometers_km_to_miles_mi">Kilometers(Km) to Miles(mi)</string>
    <string name="miles_mi_to_kilometers_km">Miles(mi) to Kilometers(Km)</string>
    <string name="launch_converter">Launch Converter</string>
    <string name="welcome">Welcome!</string>
    <string name="you_can_convert_units_in_one_click">You can convert units in one click.</string>
    <string name="welcome_you_can_convert_units_in_one_click">Welcome! You can convert units in one click.</string>
    <string name="converting_measurements_from">Converting measurements from</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="enter_a_measurement_in_kilograms_kg">Enter a measurement in Kilograms(Kg)</string>
    <string name="convert">Convert</string>
    <string name="output">Output:</string>
    <string name="pounds_lb">Pounds(lb)</string>
    <string name="back">Back</string>
    <string name="Result">TextView</string>
    <string name="fahrenheit_f_to_celsius_c">Fahrenheit(F) to Celsius(C)</string>
</resources>